fix: z-index changes in photographer.CSS to avoid display bugs

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -89,7 +89,7 @@
     bottom: 0px;
     right: 10vw;
     height: 60px;
-    z-index: 1;
+    z-index: 3;
     background-color: #DB8876;
 }
 
@@ -218,7 +218,7 @@
     left: 0px;
     right: 0px;
     overflow: auto;
-    z-index: 3;
+    z-index: 5;
     background-color: rgba(196, 196, 196, 0.4);
     backdrop-filter: blur(4px);
     animation: anim-modal 600ms;
@@ -335,7 +335,7 @@ form button {
     left: 0px;
     right: 0px;
     overflow: auto;
-    z-index: 3;
+    z-index: 5;
     background-color: #FFFFFF;
     animation: anim-modal 600ms;
 }
